pre final commit

--- a/contactme.html
+++ b/contactme.html
@@ -10,7 +10,7 @@
 <header class="header">
     <div class="navbar">
         <!-- for logo -->
-        <img src="logopk1.jpeg" class="logo">
+        <img src="logopk2.jpeg" class="logo">
         <ul>
             <li><a href="./index.html">Home</a></li>
             <li><a href="./contactme.html">Contact Me</a></li>
@@ -20,34 +20,35 @@
 </header>
 <body class="banner">
     <div class="contactinfo">
-        <h3 class="title">Let's get in touch</h3>
-        <p class="text">Here you can connect with me anytime</p>
-        <div class="info">
-            <div class="information">
-                <img src="./pin.svg" alt="" class="icon">
-                <p>Shahpur Siwan(Bihar), India</p>
+        <div>
+            <h3 class="title" >Let's get in touch</h3>
+            <div class="info">
+                <div class="information">
+                    <img src="./pin.svg" alt="" class="icon">
+                    <p>Shahpur Siwan(Bihar),India</p>
+                </div>
+                <div class="information">
+                    <img src="./email.svg" alt="" class="icon">
+                    <p>shiripk23@gmail.com</p>
+                </div>
+                <div class="information">
+                    <img src="./phone-call.svg" alt="" class="icon">
+                    <p>+91 9198234568</p>
+                </div>
             </div>
-            <div class="information">
-                <img src="./email.svg" alt="" class="icon">
-                <p>shiripk23@gmail.com</p>
-            </div>
-            <div class="information">
-                <img src="./phone-call.svg" alt="" class="icon">
-                <p>+91 9198234568</p>
+            <div class="social-media">
+                <p>Contact with me:</p>
+                <div class="social-icon">
+                    <a href="https://www.linkedin.com/in/pratik-srivastava-359125218/"><button><img src="./linkedin.svg" alt="" class="sicon"></button></a>
+                    <a href="https://www.instagram.com/the__emblem/"><button><img src="./instagram.svg" alt="" class="sicon"></button></a>
+                    <a href="https://www.facebook.com/Pratik.srivastava.23"><button><img src="./facebook.svg" alt="" class="sicon"></button></a>
+                </div>
             </div>
         </div>
-        <div class="social-media">
-            <p>Contact with us:</p>
-            <div class="social-icon">
-                <a href=><button><img src="./linkedin.svg" alt="" class="sicon"></button></a>
-            </div>
-            <div class="social-icon">
-                <a href=""><button><img src="./instagram.svg" alt="" class="sicon"></button></a>
-            </div>
-            <div class="social-icon">
-                <a href=""><button><img src="./facebook.svg" alt="" class="sicon"></button></a>
-            </div>
+        <div class="undrew">
+            <img src="./undraw.svg" alt="">
         </div>
     </div>
+    
 </body>
 </html>
