--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header class="header">
     <div class="navbar">
         <!-- for logo -->
-        <img src="logopk1.jpeg" class="logo">
+        <img src="./logopk2.jpeg" class="logo">
         <ul>
             <li><a href="./index.html">Home</a></li>
             <li><a href="./contactme.html">Contact Me</a></li>
@@ -23,17 +23,14 @@
         
 
         <div class="content">
-            <p><h2>PK-Design is an one stop solution for all your resume building needs . </h2><br>
-                It provides a vast regions to customize and edit resume according to your specific needs . <br>
-                 Just fill up some necessary details like NAME, E-MAIL, CONTACT NUMBER, Date Of Birth, Address etc. <br> 
-                To make all the resume making process hassle free, we provide sectional columns for particular skill sets, <br>
-                 For all your Technical and Personal skills fill up the Professional Information Section and for interest and <br>
-                  other info fill up the required sections and  vice-versa. </p>
+            <p><h2><span style="color: red;">PK-Design</span> is an one stop solution for all your resume building needs. </h2><br>
+                It provides a vast regions to customize and edit resume according to your specific needs. <br>
+                </p>
             <h1>BUILD YOUR RESUME</h1>
            
 
             <div>
-                <button type="button"><span></span> <a href="form.html">CLICK HERE</a></button>
+                <a href="form.html"><button type="button">CLICK HERE</button></a>
             </div>
 
         </div>
