--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
 <header class="header">
     <div class="navbar">
         <!-- for logo -->
-        <img src="logopk1.jpeg" class="logo">
+        <img src="logopk2.jpeg" class="logo">
         <ul>
             <li><a href="./index.html">Home</a></li>
             <li><a href="./contactme.html">Contact Me</a></li>
@@ -29,7 +29,7 @@
             <div class="about-text">
                 <!-- <h1>About Me</h1> -->
                 <h5>Student <span>& web developer</span></h5>
-                <p> You looking at Pratik, who is an under-grad student <br> with majors in Computer Science, 
+                <p> You are looking at Pratik, who is an under-grad student <br> with majors in Computer Science, 
                     having interest in web-development. <br> Who is a protagonist of his life.
                 </p>
                 <button type="button">let's talk</button>
